# clicker

./: meson.build
include/: cookie.h  particles.h
resources/: cookie.xcf
src/: cookie.c  main.c  particles.c
